FELIX-6582 : Switch to slf4j logging